🛠chore: 누락된 파일 추가 및 빌드관련 버그 수정